# alpaca

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  configure.ac
build-aux/: .gitignore
lib/: .gitignore  Makefile.am
lib/src/: .gitignore  error.cpp
src/: .gitignore
tests/: .gitignore  Makefile.am
tests/googlemock/: Makefile.am
tests/googletest/: Makefile.am
tests/googletest/lib/: .gitignore
tests/googletest/src/: .gitignore
tests/src/: ut_error.cpp
